agregue modificacion de datos de usuario pero aun no funciona del todo

--- a/src/components/PerfilMedico/PerfilMedico.css
+++ b/src/components/PerfilMedico/PerfilMedico.css
@@ -239,7 +239,7 @@
 
 .Cerrar {
     position: relative;
-    display: flex;
+    display: inline-block;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -247,6 +247,31 @@
     top: 15rem;
     border-radius: 20px;
     border: solid black;
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(218, 20, 20);
+    color: white;
+}
+
+.Cerrar:hover {
+    background-color: rgb(169, 0, 0);
+    color: white;
+}
+
+.Modificar {
+    position: relative;
+    display: inline-block;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    right: 37rem;
+    top: 15rem;
+    border-radius: 20px;
+    border: solid black;
+    background-color: rgb(30, 62, 203);
+    color: white;
+    margin-right: 100px;
+}
+
+.Modificar:hover {
+    background-color: rgb(19, 38, 152);
     color: white;
 }
